# CMake-Neon

./: .gitignore  CMakeLists.txt  CMakePresets.json
Deploy/Data/Shaders/: vertex_color_vs.glsl  vertex_texture_fs.glsl  vertex_texture_vs.glsl
Source/: Application.cpp  Application.hpp  Main.cpp  Precompiled.hpp
Source/Common/: Compiler.hpp  Logger.cpp  Logger.hpp  ScopeGuard.hpp  Utility.cpp  Utility.hpp
Source/Graphics/: Buffer.cpp  Buffer.hpp  OpenGL.cpp  OpenGL.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Source/System/: Image.cpp  Image.hpp
